// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/ProgressBar Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fmBCVi dwxdYI"
  >
    <div
      class="sc-XxNYO gNUYFN sc-ilfuhL gPrLKN"
      color="#fff"
    >
      <div
        class="sc-dtDOqo kXVrNy"
      >
        10
        %
      </div>
      <div
        class="sc-fHeRUh bIbKiY"
        style="width: 10%;"
      >
        <div
          class="sc-dkYRCH cAkbxc"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/ProgressBar Different Color 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fmBCVi dwxdYI"
  >
    <div
      class="sc-XxNYO gNUYFN sc-ilfuhL gPrLKN"
      color="#fff"
      type="danger"
    >
      <div
        class="sc-dtDOqo kXVrNy"
      >
        10
        %
      </div>
      <div
        class="sc-fHeRUh iumutO"
        style="width: 10%;"
      >
        <div
          class="sc-dkYRCH cAkbxc"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/ProgressBar Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fmBCVi dwxdYI"
  >
    <div
      class="sc-XxNYO kdGSto sc-ilfuhL gPrLKN"
      color="#fff"
    >
      <div
        class="sc-dtDOqo kXVrNy"
      >
        10
        %
      </div>
      <div
        class="sc-fHeRUh bIbKiY"
        style="width: 10%;"
      >
        <div
          class="sc-dkYRCH cAkbxc"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;
